# buyer-log

./: .gitignore  CHANGELOG.md  CODE_REVIEW.md  FIXES_APPLIED.md  Makefile  P2_FIXES_COMPLETE.md  README.md  TODO.md  pyproject.toml
doc/: FIXES_APPLIED.md  P1_FIXES_COMPLETE.md  P2_FIXES_COMPLETE.md  P3_FIXES_COMPLETE.md  REVIEW_AND_FIXES_SUMMARY.md  decide.xlsx
src/buyer/: __init__.py  audit.py  cache.py  cli.py  config.py  models.py  schemas.py  services.py  tui.py  web.py
src/buyer/templates/: base.html
src/buylog/: __init__.py  __main__.py  audit.py  cache.py  cli.py  config.py  excel.py  migrate.py  models.py  services.py  templates.py  tui.py
src/buylog/templates/: index.html
tests/: conftest.py  factories.py  test_data_management.py  test_excel.py  test_integration.py  test_models.py  test_quote_analysis.py  test_services.py  test_templates.py  test_workflow.py
