[project]
name = "buylog"
version = "0.1.0"
description = "A purchasing support tool."
readme = "README.md"
authors = [
    { name = "shakfu", email = "sa@example.com" }
]
requires-python = ">=3.13"
dependencies = [
    "sqlalchemy>=2.0.40",
    "tabulate>=0.9.0",
    "textual>=7.3.0",
    "textual-dev>=1.8.0",
    "pyperclip>=1.9.0",
    "requests>=2.32.0",
    "beautifulsoup4>=4.12.0",
]

[project.scripts]
buylog = "buylog:main"

[build-system]
requires = ["uv_build>=0.7.3,<0.8"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "eralchemy>=1.5.0",
    "factory-boy>=3.3.3",
    "litecli>=1.15.0",
    "mypy>=1.19.1",
    "py-pglite[sqlalchemy]>=0.5.3",
    "pytest>=8.3.5",
    "ruff>=0.14.13",
]

[tool.pytest.ini_options]
filterwarnings = [
    # SQLAlchemy uses deprecated utcnow() internally - upstream issue
    "ignore:datetime.datetime.utcnow:DeprecationWarning",
]

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true
warn_unused_ignores = true
strict_optional = true

[[tool.mypy.overrides]]
module = [
    "pyperclip",
    "requests",
    "tabulate",
    "bs4",
]
ignore_missing_imports = true
